# forumukas

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
core/: models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
core/services/: forum.py  search.py
forumukas/: asgi.py  settings.py  urls.py  wsgi.py
templates/core/: base.html  index.html  login.html  messages.html  new_thread.html  thread.html
